fix, overlapping sections

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
 
 section {
   background-color: #F5EFE8;
-  height: 100%;
+  min-height: 100%;
   color: #14191D;
   display: flex;
   align-items: center;
